# llm-evaluation-pipeline

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  SYSTEM_FLOW.md  check_json.py  check_source_url.py  pyproject.toml  requirements.txt  run_sample_evaluation.py  setup.ps1  setup.sh
examples/: run_example.py
src/: cli.py  config.py  extractors.py  ingest.py  llm_client.py  models.py  persistence.py  prompt_builder.py  scoring.py  utils.py
src/evaluators/: __init__.py  factual.py  latency_cost.py  relevance.py
tests/: conftest.py  test_factual.py  test_ingest.py  test_integration.py  test_relevance.py
